# scout

./: Cargo.toml  Makefile  asjtrie.yaml  evmas.yaml  jaredtrie.yaml
scripts/asjtrie/: chisel.toml
scripts/balls/: Cargo.toml
scripts/balls/src/: lib.rs
scripts/bazaar/: Cargo.toml
scripts/evmas/: Makefile  chisel.toml  index.js  package.json
scripts/evmas/assembly/: index.ts
scripts/jaredtrie/: Cargo.toml  chisel.toml
scripts/jaredtrie/src/: lib.rs
src/: main.rs
